log
Thu, Mar 27, 2025 10:06:51 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025 10:08:47 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:34:9: error: 'List {aka struct List}' has no member named 'size'
     list->size = 0;
         ^~
Compilation failed
e228779
Thu, Mar 27, 2025 10:09:21 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
eafea73
Thu, Mar 27, 2025 10:13:06 PM: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
a9608d9
Thu, Mar 27, 2025 10:13:32 PM: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
b81e0aa
Thu, Mar 27, 2025 10:13:53 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:42:5: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
     if (list->head != NULL)
     ^~
list.c:45:9: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
         return list->current->data;
         ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
5349bb3
Thu, Mar 27, 2025 10:14:22 PM: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
2be75bd
Thu, Mar 27, 2025 10:14:38 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
224b66a
Thu, Mar 27, 2025 10:15:18 PM: 
 list.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
 tests:  1|5
total_score: 10/70
d13d93c
Thu, Mar 27, 2025 10:15:37 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4e8c8c5
Thu, Mar 27, 2025 10:16:12 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
96922f9
Thu, Mar 27, 2025 10:16:31 PM: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
abc7347
Thu, Mar 27, 2025 10:16:50 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
6f143c9
Thu, Mar 27, 2025 10:18:13 PM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
ac9a823
Thu, Mar 27, 2025 10:19:53 PM: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
ba6cf68
